--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "cli"
 version = "0.1.0"
+authors = ["jhondev <jma9974@gmail.com>"]
+license = "MIT"
+description = "A tool to search files"
+keywords = ["cli", "productivity"]
+categories = ["command-line-utilities"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
